# TinyHarness

./: .gitignore  Cargo.toml  Makefile  README.md  TINYHARNESS.md  flake.nix
.github/workflows/: ci.yml
docs/: README.md  configuration.md  contributing.md  language-detection.md  modes.md  per-project-settings.md  project-instructions.md  safety.md  skills.md  tools-reference.md
src/: agent.rs  context.rs  main.rs  mode.rs  session.rs  style.rs  system_prompt.rs
src/agent/: confirm.rs  display.rs  input.rs  mod.rs  setup.rs  tool_result.rs  tools.rs  tui_loop.rs
src/commands/: apikey.rs  clear.rs  command.rs  compact.rs  config_settings.rs  context.rs  debug.rs  exit.rs  files.rs  help.rs  image.rs  init.rs  mod.rs  mode.rs  models.rs  project_settings.rs  registry.rs  rename.rs  save_load.rs  sessions.rs  settings.rs  skill.rs
src/config/: mod.rs
src/provider/: llama_cpp.rs  mod.rs  ollama.rs  openai_compat.rs  vllm.rs
src/tools/: edit.rs  glob.rs  grep.rs  ls.rs  mod.rs  question.rs  read.rs  run.rs  switch_mode.rs  tool.rs  web_search.rs  write.rs
src/ui/: confirm.rs  diff.rs  input.rs  mod.rs  wrap.rs
tinyharness-lib/: Cargo.toml
tinyharness-lib/src/: context.rs  image.rs  lib.rs  session.rs  token.rs
tinyharness-lib/src/config/: mod.rs
tinyharness-lib/src/provider/: llama_cpp.rs  mod.rs  ollama.rs  openai_compat.rs  sockudo.rs  vllm.rs
tinyharness-lib/src/tools/: edit.rs  grep.rs  ls.rs  mod.rs  read.rs  run.rs  screenshot.rs  tool.rs  write.rs
tinyharness-lib/tests/: sockudo_integration.rs
tinyharness-ui/: Cargo.toml
(+13 files in other folders)
