[package]
name = "tinyharness-lib"
version = "0.3.1"
license = "MIT"
description = "core liblary for tinyharness"
edition = "2024"

[dependencies]
ollama-rs = { version = "0.3.4", features = ["stream"] }
tokio = { version = "1.52.1", features = ["full"] }
tokio-stream = "0.1.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
schemars = "1.2.1"
reqwest = { version = "0.13.2", features = ["stream", "json"] }
regex = "1.11.1"
glob = "0.3.2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
hmac = "0.13.0"
sha2 = "0.11.0"
md5 = "0.8.0"
tokio-tungstenite = "0.29.0"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"